<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_tool_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tool_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_tool_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="toGoogleSearch"
        android:text="@string/tool_1_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_1_option" />

    <RadioGroup
        android:id="@+id/tool_1_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:checkedButton="@id/tool_1_1"
        app:layout_constraintBottom_toTopOf="@+id/button_tool_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tool_1">

        <RadioButton
            android:id="@+id/tool_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_1_1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tool_1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_1_2"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="136dp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>